<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/iBtnRide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher"
        tools:layout_editor_absoluteX="144dp"
        tools:layout_editor_absoluteY="100dp" />

    <ImageButton
        android:id="@+id/iBtnHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/ic_launcher"
        tools:layout_editor_absoluteY="238dp" />

    <ImageButton
        android:id="@+id/iBtnAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@mipmap/ic_launcher"
        tools:layout_editor_absoluteY="373dp" />

    <TextView
        android:id="@+id/txvBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:fontFamily="casual"
        android:text="@string/balance"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/txvBalance2"
        app:layout_constraintHorizontal_bias="0.989"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="51dp" />

    <TextView
        android:id="@+id/txvRide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:fontFamily="casual"
        android:text="@string/ride"
        app:layout_constraintBottom_toTopOf="@+id/iBtnHistory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iBtnRide" />

    <TextView
        android:id="@+id/txvHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="5dp"
        android:fontFamily="casual"
        android:text="@string/history"
        app:layout_constraintBottom_toTopOf="@+id/iBtnAccount"
        app:layout_constraintTop_toBottomOf="@+id/iBtnHistory"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="169dp" />

    <TextView
        android:id="@+id/txvAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="5dp"
        android:fontFamily="casual"
        android:text="@string/account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iBtnAccount"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="155dp" />

    <TextView
        android:id="@+id/txvBalance2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="88dp"
        android:fontFamily="casual"
        android:text="Rp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:layout_editor_absoluteY="51dp" />

</android.support.constraint.ConstraintLayout>